--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "ext-json": "*"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.2",
         "barryvdh/laravel-ide-helper": "^2.6",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
