--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/js/custom.js": "/js/custom.js",
-    "/css/app.css": "/css/app.css",
-    "/css/custom.css": "/css/custom.css",
-    "/css/library.css": "/css/library.css"
+    "/css/app.css": "/css/app.css"
 }
