--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,11 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "laravelcollective/html": "^6.1"
+        "laravelcollective/html": "^6.1",
+        "orchestra/parser": "^5.0",
+      "ext-intl": "*",
+        "ext-simplexml": "*",
+        "ext-dom": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
