--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "child_process": "^1.0.2",
+        "fs": "0.0.1-security",
+        "module": "^1.2.5",
+        "sweetalert2": "^9.10.11"
     }
 }
